# vovachat

./: .gitignore  CMakeLists.txt  main.cpp
core/: SpeechHelper.java  chat.cpp  chat.h  chatgpt.cpp  chatgpt.h  control.cpp  copilot.cpp  copilot.h  gemini.cpp  gemini.h  grok.cpp  grok.h  llm.cpp  llm.h  recognizergoogle.cpp  recognizergoogle.h  recognizervosk.cpp  recognizervosk.h  settings.cpp  settings.h  speechrecognizer.cpp  speechrecognizer.h  speechsynthesizer.cpp  speechsynthesizer.h  trayiconmanager.cpp  trayiconmanager.h
js/: chatgpt.js
qml/: Chat.qml  Main.qml
vosk/: README.md
